--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.6",
     "axios": "^1.13.5",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "js-cookies": "^1.0.4",
     "next": "16.1.6",
     "react": "19.2.3",
